force-app/main/default/objects/redwing__Survey_Question__c/redwing__Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQN-{0000000}</displayFormat>
        <label>Survey Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>