force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>redwing__Answer_Sequence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Answer Sequence</label>
    <referenceTo>redwing__Answer_Sequence__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>