force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Media_Height__c.field-meta.xml
<CustomField>
    <fullName>redwing__Media_Height__c</fullName>
    <inlineHelpText>The height of embedded Media. If empty, the default height will lbe used.</inlineHelpText>
    <label>Media Height</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>