force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Media_Width__c.field-meta.xml
<CustomField>
    <fullName>redwing__Media_Width__c</fullName>
    <inlineHelpText>The width of embedded Media. If empty, the default width will lbe used.</inlineHelpText>
    <label>Media Width</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>