force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question__c</fullName>
    <label>Question</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>