force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Removed__c.field-meta.xml
<CustomField>
    <fullName>redwing__Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>