force-app/main/default/objects/redwing__Survey_Question__c/fields/redwing__Survey_Page__c.field-meta.xml
<CustomField>
    <fullName>redwing__Survey_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Page</label>
    <referenceTo>redwing__Survey_Page__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>